<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
     <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <SearchView
            android:id="@android:id/selectTextMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </SearchView>
    </TableRow>
    
    <TableRow
	    android:id="@+id/tableRow2"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#000000" >

        <TextView
            android:id="@+id/recipesTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/recipes_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button1"
            android:background="#444444"
            android:onClick="showAddRecipe"
            android:text="@string/add_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
     </TableRow>
     <TableRow
	    android:id="@+id/tableRow3"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
    <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
     </ListView>
     </TableRow>
	<TableRow
	    android:id="@+id/tableRow4"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
          <Button
            android:id="@+id/button1"
            android:background="#444444"
            android:onClick="showAddRecipe"
            android:text="@string/spinner_button"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
         	android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />
      <Spinner
         android:id="@+id/spinner1"
         android:entries="@array/spinner1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
     
     </TableRow>
    
    

</TableLayout>
